--- a/proyecto.css
+++ b/proyecto.css
@@ -5,20 +5,21 @@
   width: 100%;
   height: 80px;
   display: flex;
-  justify-content: space_between;
+  justify-content: space-between;
   align-items: center;
   padding: 0 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 .logo img {
-  height: 110px;
+  height: 90px;
+  display: block;
 }
 .Menu-Horizontal {
   list-style: none;
   display: flex;
   margin-left: auto;
   width: 100%;
-  justify-content: space_around;
-  padding: 150px;
+  justify-content: space-around;
 }
 .Menu-Horizontal li a {
   text-decoration: none;
@@ -140,6 +141,29 @@
   border-radius: 5px;
 }
 
+.lista-checkbox li,
+.lista-radio li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.lista-checkbox li label,
+.lista-radio li label {
+  margin: 0;
+  flex: 1;
+  font-weight: normal;
+  cursor: pointer;
+}
+
+.lista-checkbox input[type="checkbox"],
+.lista-radio input[type="radio"] {
+  width: auto;
+  margin: 0;
+  cursor: pointer;
+}
+
 .formulario button {
   background-color: #008f4c;
   padding: 12px 20px;
@@ -155,7 +179,7 @@
 }
 .footer-info {
   flex: 1;
-  min-width: 300;
+  min-width: 300px;
 }
 .footer-info h3 {
   color: blue;
@@ -178,4 +202,11 @@
 .lista-redes li a {
   text-decoration: none;
   color: red;
+}
+
+@media (max-width: 768px) {
+    .logo img {
+        max-width: 80px;
+        float: left;
+    }
 }
